src/snapshots/avdl__compiler__tests__suggest_primitive_case_mismatch.snap
---
source: src/compiler.rs
expression: suggestion
---
did you mean `string`? (note: Avro primitives are lowercase)
