src/snapshots/avdl__compiler__tests__suggest_primitive_int_capitalized.snap
---
source: src/compiler.rs
expression: suggestion
---
did you mean `int`? (note: Avro primitives are lowercase)
