src/snapshots/avdl__compiler__tests__undefined_message_param_type_is_rejected.snap
---
source: src/compiler.rs
expression: "crate::error::render_diagnostic(&err)"
---
  x Undefined name: test.DoesNotExist
   ,-[<input>:4:30]
 3 |             protocol P {
 4 |                 void process(DoesNotExist arg);
   :                              ^^^^^^|^^^^^
   :                                    `-- Undefined name: test.DoesNotExist
 5 |             }
   `----
