src/snapshots/avdl__compiler__tests__undefined_type_no_suggestion_for_unrelated.snap
---
source: src/compiler.rs
expression: "crate::error::render_diagnostic(&err)"
---
  x Undefined name: test.CompletelyUnrelated
   ,-[<input>:4:28]
 3 |             protocol P {
 4 |                 record R { CompletelyUnrelated field; }
   :                            ^^^^^^^^^|^^^^^^^^^
   :                                     `-- Undefined name: test.CompletelyUnrelated
 5 |             }
   `----
