src/snapshots/avdl__compiler__tests__undefined_type_suggests_capitalized_primitive.snap
---
source: src/compiler.rs
expression: "crate::error::render_diagnostic(&err)"
---
  x Undefined name: test.String
   ,-[<input>:4:28]
 3 |             protocol P {
 4 |                 record R { String name; }
   :                            ^^^|^^
   :                               `-- Undefined name: test.String
 5 |             }
   `----
  help: did you mean `string`? (note: Avro primitives are lowercase)
