src/snapshots/avdl__compiler__tests__undefined_type_suggests_primitive.snap
---
source: src/compiler.rs
expression: "crate::error::render_diagnostic(&err)"
---
  x Undefined name: test.stiring
   ,-[<input>:4:28]
 3 |             protocol P {
 4 |                 record R { stiring name; }
   :                            ^^^|^^^
   :                               `-- Undefined name: test.stiring
 5 |             }
   `----
  help: did you mean `string`?
